// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationCard should render correctly - no data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ConfigurationCard should render correctly with data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ConfigurationCard should render enabled/disabled 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled / 1 disabled
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`ConfigurationCard should render extra 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Configuration
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Installed packages title"
              >
                Installed packages
              </dt>
              <dd
                class=""
                data-ouia-component-id="Installed packages value"
              >
                <div>
                  <a
                    href="/installed_packages"
                  >
                    1 package
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Services title"
              >
                Services
              </dt>
              <dd
                class=""
                data-ouia-component-id="Services value"
              >
                <div>
                  <a
                    href="/services"
                  >
                    1 service
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Running processes title"
              >
                Running processes
              </dt>
              <dd
                class=""
                data-ouia-component-id="Running processes value"
              >
                <div>
                  <a
                    href="/running_processes"
                  >
                    1 process
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Repositories title"
              >
                Repositories
              </dt>
              <dd
                class=""
                data-ouia-component-id="Repositories value"
              >
                <div>
                  <a
                    href="/repositories"
                  >
                    1 enabled
                  </a>
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="/undefined"
                  >
                    1 tests
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
